# social_bot

./: .github-ci.yaml  .gitlab-ci.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/social_bot/: app.py
