[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "social_bot"
dynamic = ["version"]
description = "A bot for managing social media interactions"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["social media", "bot", "automation"]

[tool.hatch.build.targets.wheel]
packages = ["src/social_bot"]

authors = [
  { name = "jrwhite 🤙", email = "jr@white8785.com" },
]

dynamic = ["version"]
[tool.hatch.version]
path = "src/social_bot/__about__.py"


classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.3.0",
  "pytest-cov>=4.0.0",
  "mypy>=1.2.0",
  "flake8>=6.0.0",
  "black>=23.3.0",
  "isort>=5.12.0",
  "python-dotenv"
]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "requests",
  "tweepy",
  "slack-bolt",
  "fastapi",
  "uvicorn",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=derbycitybmx --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["311", "312"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/social_bot/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
  "tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = true
warn_return_any = true
namespace_packages = true

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120
py_version = 311